@@ -204,7 +204,7 @@ A: libiconv, as an internationalization library, supports those character
        We implement this because Microsoft Outlook Express / Microsoft MimeOLE
        sends emails in this encoding.
      * U90, S90
-       We DON'T implement this because I have no informations about what it
+       We DON'T implement this because I have no information about what it
        is or who uses it.
    Simplified Chinese
      * EUC-CN = GB2312
